--- a/my-app/src/styles/AccessibleComponents.css
+++ b/my-app/src/styles/AccessibleComponents.css
@@ -1,5 +1,8 @@
 body {
-    background-color: #131313;
+    /* background-color: #131313; */
+    background-color: #FFFCF6;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 h1 {
@@ -18,7 +21,6 @@ h3 {
     font-size: 50;
     font-style: italic;
     text-align: left;
-    /* align-items: left; */
 }
 
 h4 {
@@ -26,6 +28,21 @@ h4 {
     font-size: 24;
     font-style: italic;
     font-weight: bold;
+    text-align: left;
+}
+
+h5 { /* good for quotes */
+    color: #F4B1A4;
+    font-size: 30;
+    font-weight: bolder;
+    text-align: left;
+}
+
+p {
+    color: #333333;
+    /* color: white; */
+    font-size: 24;
+    text-align: left;
 }
 
 .main-box {
